# Local-Social

./: .gitignore  First Project Milestone.docx  Logo Small.ai  README.md  readme.md
LocalSocialWeb/myApp/: package-lock.json  package.json
LocalSocialWeb/myApp/src/: app.html
LocalSocialWeb/myApp/src/components/: +authenticate.svelte  +header.svelte  +rightSideBar.svelte  +textBox.svelte  AddFriends.svelte  userName.svelte
LocalSocialWeb/myApp/src/lib/firebase/: firebase.js
LocalSocialWeb/myApp/src/routes/: +layout.svelte  +page.svelte
LocalSocialWeb/myApp/src/routes/createPost/: +layout.svelte
LocalSocialWeb/myApp/src/routes/home/: +layout.svelte  +page.svelte
LocalSocialWeb/myApp/src/routes/profile/: +layout.svelte  +page.svelte
LocalSocialWeb/myApp/src/store/: store.js
Logos/: Logo.ai  local social.ai
Storyboards/: Homepage.psd
backend/: Cargo.toml  Rocket.toml
backend/src/: main.rs
myapp/: package-lock.json
myapp old - DONT USE/: package-lock.json
myapp/public/: index.html
myapp/src/: App.svelte
myapp/src/parts/: mainHeader.svelte  normalCard.svelte  rightSideBar.svelte
