[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] } # for our async runtime
reqwest = { version = "0.11.14", features = ["json"] }